# 3D_Software_Renderer

./: .gitignore  CMakeLists.txt  README.md  \
include/: appstate.h  camera.h  clipping.h  config.h  display.h  lights.h  matrix.h  mesh.h  texture.h  threads.h  triangle.h  utilities.h  vector.h
src/: camera.c  clipping.c  display.c  lights.c  main.c  matrix.c  mesh.c  texture.c  threads.c  triangle.c  utilities.c  vector.c
